--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <h1>Busca un Pokémon</h1>
     </header>
     <main>
-        <input type="number" id="pokemonInput" placeholder="Ingresa un número">
-        <button id="buscarPokemon">Buscar</button>
-        <div id="pokemonContainer"></div>
+        <form action="#">
+            <input type="number" id="pokemonInput" placeholder="Ingresa un número">
+            <button type="submit" id="buscarPokemon">Buscar</button>
+            <div id="pokemonContainer"></div>
+        </form>
     </main>
     <script src="./js/main.js"></script>
 </body>
